[package]
edition = "2021"
name = "rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flutter_rust_bridge_codegen = {version = "1", features = []}

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
abao = { git = "https://github.com/n0-computer/abao", features = ["group_size_256k"], default_features = false }
anyhow = "1.0.66"
blake3 = "1.3.3"
chacha20poly1305 = "0.10.1"
flutter_rust_bridge = "1"
