[package]
edition = "2024"
name = "rust"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
flutter_rust_bridge_codegen = { version = "2.10.0", features = [] }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
abao = { git = "https://github.com/n0-computer/abao", features = [
    "group_size_256k",
], default-features = false }
anyhow = "1.0.98"
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
flutter_rust_bridge = "2.10.0"
# ring = "0.17.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
